# ep-demo

./: .clang-format  .clangd  CMakeLists.txt  README.md  build.sh  ut.sh
MD/: EP_DEMO_ANALYSIS.md  EP_DEMO_ANALYSIS_ZH.md  PROCESS.md
include/: ep_buffer.h  ep_configs.cuh  ep_exception.cuh  ep_kernel.h  ep_launch.cuh  ep_utils.cuh
include/ep_ibgda/: compiler.h  memheap.h  mlx5_ifc.h  mlx5_prm.h  mlx5gda.h  os.h
src/: ep_buffer.cpp  ep_kernel.cu
src/ep_ibgda/: mlx5gda.cpp
test/: test_dispatch_combine.cpp  test_init.cpp  test_multi.cpp  test_suite.cpp
